updated meta tab

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- telling the device to fit the screen using meta tab -->
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>website</title>
 </head>
 
@@ -12,7 +13,7 @@
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
     </header>
-        <section>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,7 +25,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </section>
+        </nav>
     </div>
     <div class="hero"></div>
     <div class="content">
