--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<!-- telling the device to fit the screen using meta tab -->
+<!-- Device's will fit the screen using meta tab -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
@@ -27,10 +27,10 @@
             </ul>
         </nav>
     </header>
-    </div>
+
     <div class="hero"></div>
     <article class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
