--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- <div class="header"> -->
-    <header>
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
     
         <nav>
@@ -29,9 +29,9 @@
     </header>
 
     <div class="hero"></div>
-    <article class="content">
+    <main class="content">
         <section id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -51,7 +51,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-    </article>
+    </main>
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
