--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<!-- Device's will fit the screen using meta tab -->
+
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport"content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Horiseon</title>
 </head>
 
 <body>
-    <!-- <div class="header"> -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-    
         <nav>
             <ul>
                 <li>
@@ -27,11 +24,12 @@
             </ul>
         </nav>
     </header>
-
     <div class="hero"></div>
     <main class="content">
-        <section id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left"/>
+        <section 
+        id="search-engine-optimization"
+        class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="meeting" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -72,11 +70,10 @@
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+                  </p>
         </section>
     </aside>
-    <!-- <div class="footer"> -->
-    <footer>
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
@@ -84,4 +81,4 @@
     </footer>
 </body>
 
-</html>
+</html>   
